rewrite by Manon: usage of Cloud9 is now explained stepwise in an enumerate environment

--- a/tutorial.tex
+++ b/tutorial.tex
@@ -99,9 +99,21 @@ Let op het gebruik van hoofdletters en kleine letters in de code. \cpp is \emph{
 
 
 \paragraph{Opdrachten}
+
 \begin{enumerate}
-	\item
-		Ga naar Cloud9 op \url{http://c9.io/}. Maak een account aan. Als je ingelogd bent, klik je op `create workspace' en vervolgens weer op `create workspace'. Kies een leuke naam voor je workspace. Selecteer C/\cpp, de rest kun je laten staan zoals het nu staat. Klik op `create' en wacht even. (Het duurt even voordat de workspace is gemaakt, ook al spring je direct weer terug naar het dashboard.) Klik links onder `my projects' op de workspace die je net hebt gecreëerd. Wacht even tot er `start editing' staat en klik hierop. Ga vervolgens naar `File' en klik op `New File'. Sla op met CTRL + S en verander de naam van de file naar \mono{hallo.cpp}. De naam van je programma mag altijd alleen letters en underscores bevatten. De \mono{.cpp} zorgt ervoor dat de compiler weet dat het een \cpp programma is. (De \mono{p}'s staan voor \emph{plus}.)
+	\item 
+		Om Cloud9 te gebruiken volg je de volgende stappen: 
+		\begin{enumerate} 
+			\item Ga naar Cloud9 op \url{http://c9.io/}. Maak een account aan. 
+			\item Als je ingelogd bent, klik je op `create workspace' en vervolgens weer op `create workspace'. 
+			\item Kies een leuke naam voor je workspace. 
+			\item Selecteer C/\cpp, de rest kun je laten staan zoals het nu staat. 
+			\item Klik op `create' en wacht even. (Het duurt even voordat de workspace is gemaakt, ook al spring je direct weer terug naar het dashboard.) 
+			\item Klik links onder `my projects' op de workspace die je net hebt gecreëerd. Wacht even tot er `start editing' staat en klik hierop. 
+			\item Ga vervolgens naar `File' en klik op `New File'. 
+			\item Sla op met CTRL + S en verander de naam van de file naar \mono{hallo.cpp}. De naam van je programma mag altijd alleen letters en underscores bevatten. De \mono{.cpp} zorgt ervoor dat de compiler weet dat het een \cpp programma is. (De \mono{p}'s staan voor \emph{plus}.)
+		\end{enumerate} 
+
 		
 	\item 
 		Type nu de code uit het bovenstaande voorbeeld over in het bestand \mono{hallo.cpp}, maar laat het commentaar nog even weg. Start het programma door op `Run' bovenaan in de werkbalk te klikken. Als alles goed gaat zie je nu onderin het beeld een blauw schermpje met de tekst `Running /home/ubuntu/workspace/hallo.cpp'. Omdat het programma nog niets doet, staat hier nog geen uitvoer onder.
