--- a/tutorial.tex
+++ b/tutorial.tex
@@ -150,7 +150,7 @@ Hierbij staat de tekst `string, cijfer, of nog iets anders' schuingedrukt, omdat
 }                                                                                                                                                               
 ^
 			\end{verbatim}
-			De compiler geeft hier aan dat er ergens een punt-komma mist. Op de eerste regel van de foutmelding zegt de compiler dat de fout in de functie \texttt{main} zit. Op de tweede regel zegt de compiler dat hij op regel 16, bij het eerste teken, een fout tegenkomt. De fout is dat er voor de accolade ergens nog een puntkomma zou moeten komen. De laatste twee regels geven een soort van visuele weergave van waar de fout zit. \\
+			De compiler geeft hier aan dat er ergens een puntkomma mist. Op de eerste regel van de foutmelding zegt de compiler dat de fout in de functie \texttt{main} zit. Op de tweede regel zegt de compiler dat hij op regel 16, bij het eerste teken, een fout tegenkomt. De fout is dat er voor de accolade ergens nog een puntkomma zou moeten komen. De laatste twee regels geven een soort van visuele weergave van waar de fout zit. \\
 			Waarom komt de foutmelding niet bij regel 7? \\
 			Probeer de foutmelding op te lossen door iets neer te zetten op regel 15. \\
 			Haal nu de laatste \texttt{<} weg van regel 7 (ééntje maar). Je krijgt nu een \emph{veel} langere foutmelding, maar de belangrijkste informatie staat helemaal bovenaan. Los de fout weer op en ga verder met de volgende opdracht.
